# routes/index.js
@@ -4,7 +4,7 @@ const categoryRoutes = require('./categoryRoutes.js')
 const userRoutes = require('./userRoutes.js')
 const paymentRoutes = require('./paymentRoutes.js')
 const cartRoutes = require('./cartRoutes.js')
-const invoiceRoutes = require('./invoiceRoutes.js')
+const transactionRoutes = require('./transactionRoutes.js')
 
 route.post('/', (req, res) => {
     res.redirect('/users/login')
@@ -14,5 +14,5 @@ route.use('/categories', categoryRoutes);
 route.use('/users', userRoutes);
 route.use('/payments', paymentRoutes);
 route.use('/:username/carts', cartRoutes);
-route.use('/:username/invoices', invoiceRoutes);
+route.use('/:username/transactions', transactionRoutes);
 module.exports = route
